[gd_scene load_steps=3 format=3 uid="uid://bwsttoxs1xpjg"]

[ext_resource type="Script" uid="uid://diuesa2w8jncb" path="res://card_preview.gd" id="1_lsid1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sq1vt"]

[node name="CardPreview" type="MarginContainer"]
custom_minimum_size = Vector2(165, 220)
anchors_preset = -1
anchor_right = 0.133
anchor_bottom = 0.309
offset_right = -0.216003
offset_bottom = -0.23201
mouse_filter = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_lsid1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sq1vt")

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 23.0
offset_bottom = 47.0
grow_horizontal = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 120.0
offset_right = -4.0
offset_bottom = 157.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "deal 6 damage to a single enemy"
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 2.0
offset_right = 24.0
offset_bottom = 23.0

[node name="TypeLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
